exports[`CircularProgress should render as light if set 1`] = `
<svg
  className=""
  viewBox="0 0 50 50">
  <circle
    className={undefined}
    cx={25}
    cy={25}
    fill="none"
    r={20}
    style={undefined} />
</svg>
`;

exports[`CircularProgress should render at large size if set 1`] = `
<svg
  className="undefined"
  viewBox="0 0 50 50">
  <circle
    className={undefined}
    cx={25}
    cy={25}
    fill="none"
    r={20}
    style={undefined} />
</svg>
`;

exports[`CircularProgress should render at small size if set 1`] = `
<svg
  className=""
  viewBox="0 0 50 50">
  <circle
    className={undefined}
    cx={25}
    cy={25}
    fill="none"
    r={20}
    style={undefined} />
</svg>
`;

exports[`CircularProgress should render by default at default size 1`] = `
<svg
  className=""
  viewBox="0 0 50 50">
  <circle
    className={undefined}
    cx={25}
    cy={25}
    fill="none"
    r={20}
    style={undefined} />
</svg>
`;

exports[`CircularProgress should render with percent if set 1`] = `
<svg
  className=""
  viewBox="0 0 50 50">
  <circle
    className={undefined}
    cx={25}
    cy={25}
    fill="none"
    r={20}
    style={
      Object {
        "strokeDasharray": 125.66370614359172,
        "strokeDashoffset": 87.96459430051421,
      }
    } />
</svg>
`;
